--- a/app/src/main/res/layout/story_list_item.xml
+++ b/app/src/main/res/layout/story_list_item.xml
@@ -9,21 +9,25 @@
         android:layout_width="wrap_content"
         android:text="Open"
         android:layout_alignParentRight="true"
+        android:focusable="false"
         android:layout_height="wrap_content" />
 
     <TextView
         android:id="@+id/title"
         android:layout_toLeftOf="@id/openBtn"
         android:text="Title"
+        android:maxLines="2"
         android:padding="3dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
 	<TextView
         android:id="@+id/info"
+        android:layout_toLeftOf="@id/openBtn"
         android:text="info"
         android:padding="3dp"
         android:textSize="10sp"
+        android:maxLines="2"
         android:layout_below="@id/title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
