--- a/app/src/main/res/layout/fragment_stories_list.xml
+++ b/app/src/main/res/layout/fragment_stories_list.xml
@@ -11,13 +11,10 @@
         android:layout_height="wrap_content"
         android:layout_centerInParent="true" />
         
-     <ListView
-        android:id="@android:id/list"
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/stories_list_view"
+        android:scrollbars="vertical"
         android:layout_width="match_parent"
-        android:layout_height="fill_parent"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true" >
-    </ListView>
-    
+        android:layout_height="match_parent"/>
 
 </RelativeLayout>
