--- a/app/src/main/res/drawable/item_highlight.xml
+++ b/app/src/main/res/drawable/item_highlight.xml
@@ -1,5 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_pressed="true" android:drawable="@color/primary_material_light" />
-    <item android:drawable="@color/background_material_light" />
+    <item android:state_pressed="true" >
+        <shape android:shape="rectangle">
+            <solid android:color="@color/primary_color" />
+            <corners android:radius="2dp" />
+        </shape>
+    </item>
+
+    <item >
+        <shape android:shape="rectangle">
+            <solid android:color="@color/primary_color" />
+            <corners android:radius="2dp" />
+        </shape>
+    </item>
+
 </selector>
