--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,11 +1,36 @@
 <resources>
 
-    <style name="AppTheme.Base" parent="Theme.AppCompat.Light">
+    <style name="AppTheme.Base" parent="Theme.AppCompat.Light.DarkActionBar">
+        <!--   your app branding color for the app bar -->
+        <!--<item name="colorPrimary">@color/primary_color</item>-->
+        <item name="actionBarStyle">@style/MyActionBar</item>
+        <item name="android:buttonStyle">@style/ButtonTheme</item>
+        <item name="actionMenuTextColor">@color/text_normal</item>
+        <item name="android:textColor">@color/text_normal</item>
     </style>
 
     <!-- Base application theme. -->
     <style name="AppTheme" parent="AppTheme.Base">
         <!-- Customize your theme here. -->
+    </style>
+
+    <style name="MyActionBar"
+        parent="@style/Widget.AppCompat.Light.ActionBar.Solid.Inverse">
+        <item name="titleTextStyle">@style/MyActionBarTitleText</item>
+        <item name="android:background">@drawable/view_background</item>
+
+    </style>
+
+
+
+    <!-- ActionBar title text -->
+    <style name="MyActionBarTitleText" parent="@style/TextAppearance.AppCompat.Widget.ActionBar.Title">
+        <item name="android:textColor">@color/text_normal</item>
+        <!-- The textColor property is backward compatible with the Support Library -->
+    </style>
+
+    <style name="ButtonTheme" parent="android:style/Widget.Button">
+        <item name="android:textColor">@color/text_normal</item>
     </style>
 
 </resources>
