--- a/app/src/main/res/layout/comment_list_item.xml
+++ b/app/src/main/res/layout/comment_list_item.xml
@@ -13,6 +13,7 @@
         android:text="info"
         android:padding="3dp"
         android:textSize="10sp"
+        android:textColor="@color/text_dark"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
@@ -32,6 +33,7 @@
         android:maxLines="2"
         android:padding="3dp"
         android:textSize="10sp"
+        android:textColor="@color/text_dark"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
@@ -40,7 +42,7 @@
         android:layout_below="@id/replyInfo"
         android:text="Reply"
         android:padding="3dp"
-        android:textSize="10sp"
+        android:textSize="11sp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
