--- a/app/src/main/res/drawable/item_highlight.xml
+++ b/app/src/main/res/drawable/item_highlight.xml
@@ -2,14 +2,14 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_pressed="true" >
         <shape android:shape="rectangle">
-            <solid android:color="@color/primary_color_light" />
+            <solid android:color="@color/color_accent" />
             <corners android:radius="2dp" />
         </shape>
     </item>
 
     <item >
         <shape android:shape="rectangle">
-            <solid android:color="@color/primary_color" />
+            <solid android:color="@color/color_primary_dark" />
             <corners android:radius="2dp" />
         </shape>
     </item>
