--- a/app/src/main/res/drawable/view_background.xml
+++ b/app/src/main/res/drawable/view_background.xml
@@ -1,5 +1,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="@color/primary_color" />
+    <solid android:color="@color/color_primary_dark" />
     <corners android:radius="2dp" />
 </shape>
