--- a/app/src/main/res/layout/comment_list_item.xml
+++ b/app/src/main/res/layout/comment_list_item.xml
@@ -8,50 +8,55 @@
     android:background="@drawable/view_background"
     android:orientation="horizontal" >
 
-	<TextView
-        android:id="@+id/info"
-        android:text="info"
+    <TextView
+        android:id="@+id/content"
+        android:text="Content"
+        android:textColorLink="@color/color_text_hyperlink"
+        android:linksClickable="true"
+        android:autoLink="web"
         android:padding="3dp"
-        android:textSize="10sp"
-        android:textColor="@color/text_dark"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
     <TextView
-        android:id="@+id/content"
-        android:layout_below="@id/info"
-        android:text="Content"
+        android:id="@+id/info"
+        android:text="info"
+        android:layout_below="@id/content"
         android:padding="3dp"
+        android:textSize="10sp"
+        android:textColor="@color/color_text_dark"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
     <View
         android:id="@+id/separator"
         android:layout_width="match_parent"
-        android:background="@color/bg_dark"
-        android:layout_below="@id/content"
-        android:layout_marginTop="5dp"
+        android:background="@color/color_divider"
+        android:layout_below="@id/info"
         android:layout_height="1dp">
     </View>
 
     <TextView
-        android:id="@+id/replyInfo"
+        android:id="@+id/replyContent"
+        android:layout_below="@id/separator"
+        android:text="Reply"
         android:layout_marginTop="6dp"
-        android:layout_below="@id/content"
-        android:text="Reply Info"
-        android:maxLines="2"
         android:padding="3dp"
-        android:textSize="10sp"
-        android:textColor="@color/text_dark"
+        android:textSize="11sp"
+        android:textColorLink="@color/color_text_hyperlink"
+        android:linksClickable="true"
+        android:autoLink="web"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
     <TextView
-        android:id="@+id/replyContent"
-        android:layout_below="@id/replyInfo"
-        android:text="Reply"
+        android:id="@+id/replyInfo"
+        android:layout_below="@id/replyContent"
+        android:text="Reply Info"
+        android:maxLines="2"
         android:padding="3dp"
-        android:textSize="11sp"
+        android:textSize="10sp"
+        android:textColor="@color/color_text_dark"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
