--- a/app/src/main/res/layout/story_list_item.xml
+++ b/app/src/main/res/layout/story_list_item.xml
@@ -6,7 +6,7 @@
     android:layout_marginLeft="5dp"
     android:layout_marginRight="5dp"
     android:layout_marginTop="5dp"
-    android:background="@color/background_material_dark"
+    android:background="@drawable/item_highlight"
     android:orientation="horizontal" >
 
     <TextView
@@ -19,9 +19,9 @@
         android:focusable="false"
         android:layout_alignTop="@+id/title"
         android:gravity="center"
-        android:paddingLeft="10dp"
-        android:paddingRight="10dp"
-        android:background="@color/bg_dark"
+        android:paddingLeft="15dp"
+        android:paddingRight="15dp"
+        android:background="@color/color_accent"
         android:layout_alignBottom="@+id/info"
         android:layout_height="wrap_content" />
 
@@ -29,6 +29,7 @@
         android:id="@+id/title"
         android:layout_toLeftOf="@id/openBtn"
         android:text="Title"
+        android:textStyle="bold"
         android:maxLines="2"
         android:padding="5dp"
         android:layout_width="match_parent"
@@ -41,7 +42,7 @@
         android:padding="5dp"
         android:textSize="10sp"
         android:maxLines="2"
-        android:textColor="@color/text_dark"
+        android:textColor="@color/color_text_dark"
         android:layout_below="@id/title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
